--- a/app/src/main/res/layout/activity_transfer_success.xml
+++ b/app/src/main/res/layout/activity_transfer_success.xml
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <com.mobio.analytics.ComboText
+    <com.mobio.sample.ComboText
         android:id="@+id/ct_from"
         android:layout_marginTop="12pt"
         app:textContent="0111688898"
@@ -40,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <com.mobio.analytics.ComboText
+    <com.mobio.sample.ComboText
         android:id="@+id/ct_to"
         android:layout_marginTop="8pt"
         app:textContent="0111579219"
@@ -48,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <com.mobio.analytics.ComboText
+    <com.mobio.sample.ComboText
         android:id="@+id/ct_to_name"
         android:layout_marginTop="8pt"
         app:textContent="Trinh Kim Ngan"
@@ -56,7 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <com.mobio.analytics.ComboText
+    <com.mobio.sample.ComboText
         android:id="@+id/ct_fee"
         android:layout_marginTop="8pt"
         app:textContent="0 VND"
@@ -64,7 +64,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <com.mobio.analytics.ComboText
+    <com.mobio.sample.ComboText
         android:id="@+id/ct_content"
         android:layout_marginTop="8pt"
         app:textContent="Ha Nguyen chuyen tien cho nguoi anh em thien lanh"
@@ -72,7 +72,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <com.mobio.analytics.ComboText
+    <com.mobio.sample.ComboText
         android:id="@+id/ct_time"
         android:layout_marginTop="8pt"
         app:textContent="12/10/2021 15:30"
