--- a/analytics/src/main/res/layout/custom_popup.xml
+++ b/analytics/src/main/res/layout/custom_popup.xml
@@ -36,15 +36,35 @@
         android:textColor="#80333333"
         android:textSize="7pt"/>
 
-
-    <Button
-        android:layout_margin="8pt"
-        android:id="@+id/btn_action"
-        android:textColor="#FFFFFF"
-        android:textSize="8pt"
-        android:text="Action"
-        android:background="@drawable/bgr_button_login"
+    <LinearLayout
+        android:gravity="center"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="24pt"/>
+        android:layout_height="wrap_content">
+
+        <Button
+            android:textAllCaps="false"
+            android:layout_margin="8pt"
+            android:id="@+id/btn_action"
+            android:textColor="#FFFFFF"
+            android:textSize="8pt"
+            android:text="Đồng ý"
+            android:background="@drawable/bgr_button_login"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="24pt"/>
+
+        <Button
+            android:textAllCaps="false"
+            android:layout_margin="8pt"
+            android:id="@+id/btn_cancel"
+            android:textColor="#FFFFFF"
+            android:textSize="8pt"
+            android:text="Huỷ"
+            android:background="@drawable/bgr_button_login"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="24pt"/>
+    </LinearLayout>
 
 </LinearLayout>
