--- a/analytics/src/main/res/layout/custom_html_popup.xml
+++ b/analytics/src/main/res/layout/custom_html_popup.xml
@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<WebView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/bgr_profile"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:ignore="WebViewLayout">
+    android:id="@+id/wv_popup">
 
-    <WebView
-        android:layout_centerInParent="true"
-        android:id="@+id/wv_popup"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-</RelativeLayout>
+</WebView>
