--- a/analytics/src/main/res/layout/activity_popup_builder.xml
+++ b/analytics/src/main/res/layout/activity_popup_builder.xml
@@ -8,13 +8,10 @@
     android:layout_height="match_parent"
     tools:context=".client.activity.PopupBuilderActivity">
 
-
-
     <WebView
         android:id="@+id/web"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
+        android:layout_height="wrap_content"/>
 
     <ProgressBar
         android:visibility="gone"
