--- a/analytics/src/main/res/values/themes.xml
+++ b/analytics/src/main/res/values/themes.xml
@@ -10,10 +10,17 @@
     </style>
 
     <style name="Theme.AppCompat.Translucent" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:background">@android:color/transparent</item> <!-- Or any transparency or color you need -->
+        <!--on below line we are setting background as transparent color-->
+        <item name="android:background">@android:color/transparent</item>
+        <!--on below line we are displaying the windowNotitle as true as we are not displaying our status bar-->
         <item name="android:windowNoTitle">true</item>
+        <!--on below line we are setting our window background as transparent color-->
         <item name="android:windowBackground">@android:color/transparent</item>
+        <!--on below line we are setting color background cache hint as null-->
         <item name="android:colorBackgroundCacheHint">@null</item>
+        <!--on below line we are adding a window translucent as true-->
         <item name="android:windowIsTranslucent">true</item>
+        <!--on below line we are adding a window animationstyle-->
+        <item name="android:windowAnimationStyle">@android:style/Animation</item>
     </style>
 </resources>
