--- a/analytics/src/main/res/layout/activity_popup_builder.xml
+++ b/analytics/src/main/res/layout/activity_popup_builder.xml
@@ -9,6 +9,7 @@
     tools:context=".client.activity.PopupBuilderActivity">
 
     <WebView
+        android:visibility="gone"
         android:id="@+id/web"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
