--- a/analytics/src/main/res/layout/push_big_picture.xml
+++ b/analytics/src/main/res/layout/push_big_picture.xml
@@ -16,6 +16,7 @@
         android:layout_gravity="center">
 
         <ImageView
+            android:src="@mipmap/voucher"
             android:id="@+id/big_picture_imageview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
