--- a/analytics/src/main/res/layout/custom_popup.xml
+++ b/analytics/src/main/res/layout/custom_popup.xml
@@ -15,6 +15,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <ImageView
+        android:scaleType="fitCenter"
+        android:layout_marginLeft="4pt"
+        android:layout_marginRight="4pt"
+        android:layout_marginTop="4pt"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/imv_content"
+        android:maxHeight="50pt"
+        android:maxWidth="50pt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
     <TextView
         android:gravity="center"
         android:layout_marginRight="4pt"
